--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "vendor-local/locale-inspector"]
 	path = vendor-local/locale-inspector
-	url = git://github.com/Pike/locale-inspector.git
+	url = https://github.com/Pike/locale-inspector.git
 [submodule "vendor-local/buildbot"]
 	path = vendor-local/buildbot
-	url = git://github.com/Pike/buildbot.git
+	url = https://github.com/Pike/buildbot.git
 [submodule "vendor-local/compare-locales"]
 	path = vendor-local/compare-locales
-	url = git://github.com/Pike/compare-locales.git
+	url = https://github.com/Pike/compare-locales.git
